Updated loader display, fixed broken css.

--- a/src/index.css
+++ b/src/index.css
@@ -407,37 +407,39 @@ button.avatar {
 }
 
 .loader {
-  width: 88px;
-  height: 88px;
-  background: rgba(255,255,255,0.3);
+  width: 80px;
+  height: 80px;
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 50%;
   padding: 16px;
 }
 
-.spinner {
-  width: 56px;
-  height: 65px;
+svg.spinner {
+  width: 48px;
+  height: 48px;
   display: block;
   margin: 0 auto;
   x: 0px;
   y: 0px;
-  viewBox: 0 0 56 56;
+  viewBox: 0 0 48 48;
 }
-
-.spinner {
+svg.spinner circle {
   fill: transparent;
   stroke: white;
   stroke-width: 4;
   stroke-linecap: round;
-  stroke-dasharray: 2;
-  transform-origin: 28px 28px 0;
+  stroke-dasharray: 176;
+  stroke-dashoffset: 134;
+  transform-origin: 24px 24px 0;
+  animation: spinner 0.6s infinite linear;
 }
 
 @keyframes spinner {
   0% {
-      transform: rotate(0deg);
-  } 100% {
-      transform: rotate(360deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
